--- a/gb/25/10/1/n14606260.md
+++ b/gb/25/10/1/n14606260.md
@@ -7,45 +7,47 @@
 <hr>
 	<p>【大纪元2025年10月01日讯】（大纪元记者黄小堂纽约报导）在市府积极推动经济复苏之际，纽约市小企业服务局（SBS）9月30日在市政厅举行的少数族裔媒体圆桌会议上，强调旗下Workforce1职业中心网络为全市居民提供免费求职服务，帮助新移民与在地求职者更快找到合适的工作。</p>
 <p>SBS局长格罗斯（Dynishal Gross）表示，亚当斯市府2022年上任以来，Workforce1职业中心网络已为超过25万名纽约人提供服务，包括职缺配对、面试准备、履历健检以及职业技能训练等，“我们的任务是让每一位纽约人都能够获得公平的就业机会，并在职涯发展上找到突破口。”</p>
-<figure id="attachment_14606261" aria-describedby="caption-attachment-14606261" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606261-186383.jpg"><img decoding="async" class="size-large wp-image-14606261" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606261-186383-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14606261" class="wp-caption-text">纽约市小企业服务局（SBS）局长格罗斯（Dynishal Gross）在圆桌会议上发言。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_14606261" aria-describedby="caption-attachment-14606261" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606261-186383.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14606261" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606261-186383-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14606261" class="wp-caption-text">纽约市小企业服务局（SBS）局长格罗斯（Dynishal Gross）在圆桌会议上发言。（黄小堂／大纪元）</figcaption></figure>
 <h2>免费服务 涵盖履历到培训</h2>
-<p>根据纽约市小企业服务局的公告，Workforce1提供的协助包括：（1）更新履历、模拟面试；（2）联系雇主，推荐职缺；（3）协助找到合适的职业培训课程（4）帮助市民准备并直接进入招聘流程。</p>
+<p>
+根据纽约市小企业服务局的公告，Workforce1提供的协助包括：（1）更新履历、模拟面试；（2）联系雇主，推荐职缺；（3）协助找到合适的职业培训课程（4）帮助市民准备并直接进入招聘流程。</p>
 <p>市府强调，所有服务均为免费，居民只需前往Workforce1网站（链接：nyc.gov/workforce1）或就近实体中心即可登记。</p>
-<p>目前Workforce1职业中心网络与医疗、建筑、零售、餐饮等多个产业合作，帮助居民连结“真正有职缺”的公司。SBS局长格罗斯在会议上提到，近期在医疗财务与营运培训计划中，不少低收入居民在结训后成功进入市内大型医疗机构，并获得具升迁机会的长期职位</p>
+<p>目前Workforce1职业中心网络与医疗、建筑、零售、餐饮等多个产业合作，帮助居民连结“真正有职缺”的公司。SBS局长格罗斯在会议上提到，近期在医疗财务与营运培训计划中，不少低收入居民在结训后成功进入市内大型医疗机构，并获得具升迁机会的长期职位
+</p>
 <h2>如何申请</h2>
-<p>居民可登录链接nyc.gov/workforce1或nyc.gov/jobsnycnow，了解更多资讯与职缺。</p>
+居民可登录链接nyc.gov/workforce1或nyc.gov/jobsnycnow，了解更多资讯与职缺。</p>
 <p>周二，夜生活办公室（ONL）执行总监加西亚（Jeffrey Garcia）当天也出席少数族裔媒体圆桌会议。</p>
-<figure id="attachment_14606263" aria-describedby="caption-attachment-14606263" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606263-186385.png"><img decoding="async" class="size-large wp-image-14606263" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606263-186385-600x400.png" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14606263" class="wp-caption-text">夜生活办公室（ONL）执行总监加西亚（Jeffrey Garcia，左）与MOIA主任卡斯特罗（右）在市政厅接受媒体联访。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_14606263" aria-describedby="caption-attachment-14606263" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606263-186385.png" rel="nofollow"><img decoding="async" class="size-large wp-image-14606263" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606263-186385-600x400.png" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14606263" class="wp-caption-text">夜生活办公室（ONL）执行总监加西亚（Jeffrey Garcia，左）与MOIA主任卡斯特罗（右）在市政厅接受媒体联访。（黄小堂／大纪元）</figcaption></figure>
 <p>纽约市夜生活办公室是属于纽约市小企业服务局辖下的部门。它的主要职责是为夜生活产业、社区和市府相关机构提供联络窗口，协助夜生活业者取得资源、处理法规、冲突调解等。所有与夜生活办公室相关的咨询与资源，都是由纽约市小企业服务局来支援和协调。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/9/n14590291.md#1">澳劳动市场新动向：裁员与招聘意向同期高企</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595280.md#1">2025湾区华语文能力测验11月登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/19/n14597864.md#1">纽约大型招聘会9月30日华埠登场 助求职者拓展新契机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14601136.md#1">颜丹：外卖员超千万  中共一出“稳就业”假戏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/8/n14611777.md#1">为何“终其一生，不过苟且二字”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616068.md#1">台湾故宫博物院百年院庆 推出宋版图书特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/9/n14612893.md#1">扰乱中孕育灵感：珍?奥斯汀的写作生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/17/n14618380.md#1">【直播】众议院议长约翰逊举行记者会（10/17）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616439.md#1">【未解之谜】以哈和平只是开始？人类最后七年倒计时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617752.md#1">【舞蹈】飞天大学2025第一学期舞蹈考试（中班 男生）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616527.md#1">金正恩送别李强时手插口袋 网民嘲讽中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616397.md#1">美贸易组织吁禁止向中国出口废旧饮料罐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616680.md#1">中国经济退潮的社会切面：几代人陷困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616334.md#1">李亚鹏转战商圈积欠巨债 与海哈金喜官宣离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14617091.md#1">黎明开唱妻女罕现身 发现被偷拍火速离场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616452.md#1">大陆女星白鹿自曝磕碎牙片 搞笑喊粉丝帮个忙</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617277.md#1">台湾创作女歌手黄小玫因病骤逝 年仅34岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617849.md#1">林心如加盟陆综 透露9年婚姻维系秘笈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617294.md#1">2025年欧洲飞行员薪资有多少？比美国多吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/16/n14617439.md#1">为什么有人会随手关灯 有人却不会？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/17/n14617924.md#1">千万别跟伴侣说这4句话 以免把关系搞砸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616625.md#1">你想要快乐吗？ 专家：从保持善良开始</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616755.md#1">小狗疼痛时的几个迹象 很容易被人们忽视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/26/n13810988.md#1">【舞蹈】中国古典舞技术技巧第六集：探海</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688392.md#1">【时政春秋】川普重兵云集中东 盘点美军战力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687003.md#1">【独家】张又侠等军头和习矛盾激烈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687419.md#1">【独家】张又侠落马 军方启动临战状态</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686742.md#1">中国转为零工经济国 民众挣扎求生存</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686678.md#1">使用气炸锅最常犯的几个错误 你可能不知道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/1/n14606260.htm">纽约市小企业局局长：求职中心帮市民找工作</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
