--- a/gb/19/7/28/n11414886.md
+++ b/gb/19/7/28/n11414886.md
@@ -3,40 +3,41 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共稀土威胁 促美澳日组成稀土产业联盟</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/Rareearthoxides-600x400.jpg" />
-<h6>中共对美国断供稀土的威胁令美、澳、日形成稀土产业三国联盟，以期打破北京的稀土控制。（维基百科公有领域）
-</h6>
+<h6>中共对美国断供稀土的威胁令美、澳、日形成稀土产业三国联盟，以期打破北京的稀土控制。（维基百科公有领域）</h6>
 <hr>
 	<p>【大纪元2019年07月28日讯】（大纪元记者张婷综合报导）中美贸易战带来的“稀土之忧”持续引发外界关注。日媒称，中共的威胁令美、澳、日形成稀土产业三国联盟，以期打破北京的稀土控制。而这一联盟的形成将会改变全球稀土供应的竞争环境。</p>
 <p>稀土被誉为“工业维生素”，它是17种化学元素的合称，由于其独特的物理和化学特性，对许多高精尖技术产品至关重要。无论是军用的激光制导武器、先进战机、导弹，还是人们常用的手机、电动汽车等，都要用到稀土。</p>
-<p>“日经亚洲评论”7月28日报导，东京政策研究基金会的研究员Hikaru Hiranuma表示，中国（共）正在利用其在稀土领域的主导地位来向全球的主要消费者施加压力。”</p>
+<p>“日经亚洲评论”7月28日报导，东京政策研究基金会的研究员Hikaru Hiranuma表示，中国（共）正在利用其在稀土领域的主导地位来向全球的主要消费者施加压力。”
+</p>
 <h2>中国减少向美国出口稀土</h2>
-<p>今年5月，美中贸易谈判破局后，中共威胁对美国打“稀土牌”。5月20日习近平视察江西稀土产业，考察时还有负责对美贸易谈判的副总理刘鹤的身影。官媒不仅对视察进行高调宣传，同时也发文强调，中国的稀土是箝制美国的一个有力武器。自这次考察后，镝和其他重要稀土元素的价格已经攀升。</p>
+<p>
+今年5月，美中贸易谈判破局后，中共威胁对美国打“稀土牌”。5月20日习近平视察江西稀土产业，考察时还有负责对美贸易谈判的副总理刘鹤的身影。官媒不仅对视察进行高调宣传，同时也发文强调，中国的稀土是箝制美国的一个有力武器。自这次考察后，镝和其他重要稀土元素的价格已经攀升。</p>
 <p>路透社7月27日报导，据27日得到的相关中国海关数据，中国6月向美国出口的稀土磁铁比5月下降了3.9%。外界一直怀疑，北京将减少出口稀土产品，作为同美国打贸易战的一部分。</p>
 <p>因美国80%稀土进口依赖于中国，美国政府正在采取措施，发展本土稀土业，与盟友合作，应对中共在贸易战中发出的稀土禁运或限制的威胁。</p>
 <p>7月22日，美国总统川普（特朗普）在一份备忘录中告诉五角大楼，寻找更好的方法来获得可用于军事用途的稀土磁铁（rare earth magnet）。</p>
-<figure id="attachment_11414894" aria-describedby="caption-attachment-11414894" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/800px-Ferrofluid_Magnet_under_glass_edit-600x450-1.jpg"><img decoding="async" class="size-large wp-image-11414894" src="https://i.epochtimes.com/assets/uploads/2019/07/800px-Ferrofluid_Magnet_under_glass_edit-600x450-1-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11414894" class="wp-caption-text">玻璃上的铁磁流体，玻璃下方为稀土磁铁。<ahref="https://commons.wikimedia.org/wiki/File:Ferrofluid_Magnet_under_glass_edit.jpg">Gregory F. Maxwell/Wikimedia commons</a>）</figcaption></figure>
+<figure id="attachment_11414894" aria-describedby="caption-attachment-11414894" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/800px-Ferrofluid_Magnet_under_glass_edit-600x450-1.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-11414894" src="https://i.epochtimes.com/assets/uploads/2019/07/800px-Ferrofluid_Magnet_under_glass_edit-600x450-1-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-11414894" class="wp-caption-text">玻璃上的铁磁流体，玻璃下方为稀土磁铁。<ahref="https://commons.wikimedia.org/wiki/File:Ferrofluid_Magnet_under_glass_edit.jpg" rel="nofollow noopener noreferrer">Gregory F. Maxwell/Wikimedia commons</a>）</figcaption></figure>
 <p>实际上，在贸易战打响之前，川普总统就一直非常重视摆脱美国对中国稀土的依赖。他于2017年12月签署了矿物行政令，要求联邦政府找出包括稀土在内的关键矿物的新来源，加速供应链各阶段有关矿物的开采、后处理及回收等步骤。</p>
 <p>隔年，美国重新启用了位于加州的芒廷帕斯（Mountain Pass）稀土矿。该矿在历史上曾供应全球需要的大部分稀土元素，但在2015年因无法同中国的非法稀土矿竞争而宣布破产，后者几乎没有环境控制，成本也很低。</p>
 <p>芝加哥对冲基金JHL资本集团拥有芒廷帕斯近65%的股份。该集团创始人兼控股股东詹姆斯?利廷斯基（James H. Litinsky）告诉《纽约时报》，开采稀土只是计划的一部分。他计划2020年重启芒廷帕斯被封存的化学分离设施，生产稀土氧化物。该计划部分基于他的评估，即贸易摩擦将持续存在，美国将寻求自给自足。</p>
-<figure id="attachment_11414896" aria-describedby="caption-attachment-11414896" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/Mountainpass_2011-600x400.jpg"><img decoding="async" class="size-large wp-image-11414896" src="https://i.epochtimes.com/assets/uploads/2019/07/Mountainpass_2011-600x400-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11414896" class="wp-caption-text">2011年芒廷帕斯稀土矿及其附近的卫星图像。（维基百科公有领域）</figcaption></figure>
-<p>2018年2月，澳洲时任总理特恩布尔（Malcolm Turnbull）访美期间，川普和特恩布尔同意在战略矿产勘探、提炼、处理、稀土和高性能金属研发方面进行合作。</p>
+<figure id="attachment_11414896" aria-describedby="caption-attachment-11414896" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/Mountainpass_2011-600x400.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-11414896" src="https://i.epochtimes.com/assets/uploads/2019/07/Mountainpass_2011-600x400-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-11414896" class="wp-caption-text">2011年芒廷帕斯稀土矿及其附近的卫星图像。（维基百科公有领域）</figcaption></figure>
+<p>2018年2月，澳洲时任总理特恩布尔（Malcolm Turnbull）访美期间，川普和特恩布尔同意在战略矿产勘探、提炼、处理、稀土和高性能金属研发方面进行合作。
 <h2>美、澳、日建立稀土业三国联盟 以期打破中共的稀土控制</h2>
-<p>稀土其实并不稀少，但从矿石中提取稀土金属却对环境污染很大，因此很多国家选择进口。目前，美国、印度、南非、加拿大、澳大利亚、爱沙尼亚、马来西亚和巴西等国都有稀土的开采。</p>
+稀土其实并不稀少，但从矿石中提取稀土金属却对环境污染很大，因此很多国家选择进口。目前，美国、印度、南非、加拿大、澳大利亚、爱沙尼亚、马来西亚和巴西等国都有稀土的开采。</p>
 <p>近年来，越来越多的国家意识到过度依赖中国稀土所带来的潜在风险。这种风险在2010年中共对日本实行稀土禁运后明显地显现出来。</p>
 <p>2010年9月，中国渔船与日本海上保安厅巡视船在钓鱼岛海域相撞。日本以妨碍公务罪逮捕中国船长，并称事发地属于日本海域。中共外交部则宣布对钓鱼岛拥有主权，要求放人。两国关系随之激化，中共于当月便打出了手中的“稀土牌”，临时切断对日本的稀土出口。</p>
 <p>由于在2010年之前，日本进口的稀土中90%以上来自中国。中共的禁运令日本紧急采取多种方式应对危机。日本除了通过稀土回收、稀土替代、稀土节省外，还转向与澳大利亚稀土公司莱纳斯（Lynas Corporation Ltd.）合作来分担风险。2010年11月，澳洲政府称“澳洲做好准备确保对日本的长期稀土供应”。莱纳斯公司随后发布公告称，与日本“双日株式会社”（Sojitz）签订战略联盟协议，以争取更多日本市场稀土供应。</p>
 <p>2011年，日本“双日株式会社”和“日本石油、天然气和金属公司”（Japan Oil, Gas and Metals National Corporation）提供了2.5亿美元的资本和贷款，帮助莱纳斯提高产量。莱纳斯当时承诺以稳定的方式向日本供应稀土。</p>
 <p>莱纳斯是中国以外全球规模最大的稀土生产商，目前该公司提供日本稀土的30%，日本也是莱纳斯最大的客户。</p>
-<figure id="attachment_11414897" aria-describedby="caption-attachment-11414897" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/000_Hkg4090334-600x393.jpg"><img decoding="async" class="size-large wp-image-11414897" src="https://i.epochtimes.com/assets/uploads/2019/07/000_Hkg4090334-600x393-600x393.jpg" alt="" width="600" b="393" /></a><figcaption id="caption-attachment-11414897" class="wp-caption-text">莱纳斯公司在2010年10月发布的照片，显示该公司在西澳地区建造一座稀土浓缩厂。(Lynas Corporation/Lynas Corporation/AFP)</figcaption></figure>
+<figure id="attachment_11414897" aria-describedby="caption-attachment-11414897" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/000_Hkg4090334-600x393.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-11414897" src="https://i.epochtimes.com/assets/uploads/2019/07/000_Hkg4090334-600x393-600x393.jpg" alt="" width="600" b="393"></a><figcaption id="caption-attachment-11414897" class="wp-caption-text">莱纳斯公司在2010年10月发布的照片，显示该公司在西澳地区建造一座稀土浓缩厂。(Lynas Corporation/Lynas Corporation/AFP)</figcaption></figure>
 <p>眼下，中美贸易战带来的“稀土之忧”令美国积极寻求与盟友国家合作。莱纳斯公司再次成为中共稀土威胁的受益者。该公司已经与美国德克萨斯州蓝线公司（Blue Line Corp）签署了一份协议，在美国建立一家稀土分离工厂，预计在2021年可以开始运营。</p>
 <p>“日经亚洲评论”报导，一位业内人士指出，日本也正在扩大与莱纳斯的合作，从而在稀土行业建立一个三国联盟，这与亚太地区的安全格局相似，在那里，美国、日本和澳大利亚结盟，以对抗中共的军事扩张。</p>
 <p>中企生产全球高纯度稀土元素产量的85％，莱纳斯生产其余15％。莱纳斯一直在澳大利亚开采稀土，但在马来西亚进行加工。莱纳斯在5月份决定改变这一安排，并与美国蓝线公司合作在美国德克萨斯州建立分离工厂。与莱纳斯在马来西亚的工厂不同，德州工厂将能够分离镝，这是电动汽车电池生产中必不可少的元素。。</p>
 <p>日经称，镝此前其一直是由中国公司生产。莱纳斯在美国建立分离设施的举动将改变这一全球竞争环境。</p>
 <p>现在，华盛顿和堪培拉正在就稀土和其他关键矿产进行密切合作。去年12月，美国地质调查局（U.S. Geological Survey）和澳洲地球科学中心（Geoscience Australia）签署了一项初步协议，以支持联合研究和开发对美国经济至关重要的矿物。</p>
 <p>报导称，莱纳斯的战略举措显然符合堪培拉的有关对经济至关重要的关键矿物的战略。</p>
-<p>2009年，中共国企“中国有色金属矿业集团”试图收购莱纳斯的多数股权，但因澳洲政府的阻挠而挫败。</p>
+<p>2009年，中共国企“中国有色金属矿业集团”试图收购莱纳斯的多数股权，但因澳洲政府的阻挠而挫败。
 <h2>中共稀土威胁促成澳洲稀土产业的兴起</h2>
-<p>除了莱纳斯公司外，另一家涉及稀土产业的澳洲公司“北方矿业”（Northern Minerals）正在考虑改变其将稀土矿石出口到中国进行加工的传统方法。该公司现在正在考虑在澳洲建立一个新的分离工厂的计划。</p>
+除了莱纳斯公司外，另一家涉及稀土产业的澳洲公司“北方矿业”（Northern Minerals）正在考虑改变其将稀土矿石出口到中国进行加工的传统方法。该公司现在正在考虑在澳洲建立一个新的分离工厂的计划。</p>
 <p>《澳洲财经在线》6月21日称，中美贸易战带来的“稀土之忧”的另一面，是澳洲的稀土产业正在发生变化，一些新兴产业的萌发未来或改写澳洲的稀土供应链。</p>
 <p>澳洲稀土采矿公司“北方矿业”正尝试在西澳建立一个新工厂，不仅要开采用于出口的稀土矿石，还要做部分的加工，将镝矿物质分离出来。该公司正与一家国际知名工业集团就供应事宜进行商谈。公司发言人表示，自从有关稀土问题的新闻关注度提高以来，投资者的兴趣有所上升。</p>
 <p>报导引述“北方矿业”董事总经理巴克（George Bauk）的话说，该公司“需要迅速采取行动，并找到一种方法加快这一步伐”，只有发展分离稀土工业，才能进入全球市场。</p>
@@ -45,33 +46,33 @@
 <p>《澳洲财经在线》报导，澳洲最高科研机构“联邦科学与工业研究组织”（CSIRO）的金斯诺斯（Dudley Kingsnorth）教授是世界稀土专家之一。他说，在稀土成为贸易战焦点之后，澳大利亚成为受益者，初步可增加30亿至50亿澳元的稀土产量。</p>
 <p>责任编辑：李缘</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580683.md#1">《霹雳火》演员秦杨张凤书 隔20年同台再交锋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580638.md#1">全球OTT颁奖 台明星云集 林廷忆摘最佳新人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580623.md#1">贝克汉一家乘坐高价游艇游意大利 次子晒度假照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580541.md#1">金钟60主持 Lulu接节目类 曾宝仪负责戏剧类</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/4/n11363603.md#1" target="_blank">响彻在世界政坛的正义之声（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/31/n14564212.md#1">【古道人生】才女一首诗竟能改变贫穷丈夫的命运</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573085.md#1">【未解之谜】两千年无人敢挖？揭秘秦始皇的地下王国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/9/n14570620.md#1">【未解之谜】地球七大脉轮终极预言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569067.md#1">亚里斯多德的教育课：培养品格的四门学科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/4/n4588708.md#1">秉笔直书 为后世法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/4/n13695331.md#1">【器乐独奏与协奏曲】莫扎特降E大调第三号圆号协奏曲，作品第447号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573708.md#1">【纪元焦点】商圈关闭 上海为何如此萧条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14573945.md#1">【时事金扫描】美俄谈判 川普奇招拿捏普京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572340.md#1">经济学家：史上最大金融泡沫将致市场大崩盘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572367.md#1">美国最具价值的10所私立和公立大学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572804.md#1">【更新】台风杨柳袭台 14日停班停课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572427.md#1">以赵露思解约风波为例 王晶曝大陆娱乐圈乱象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573139.md#1">《歌手2025》评分仅3.8 创史上最低分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573082.md#1">首度回应隐身两年原因 杨洋受访一度欲言又止</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572439.md#1">港星陈冠希遭Nike起诉 索赔逾12万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573446.md#1">传贝佐斯想让妻子桑切斯在《007》担任要角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572017.md#1">电器在不使用时拔掉插头 既省电又降温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572631.md#1">园艺专家经验谈：别再种植这5种树</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572608.md#1">美移民新规收紧婚姻绿卡 华人律师析政策要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573410.md#1">睡太多会增加死亡风险？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571685.md#1">睡姿决定健康：睡得好又不酸痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/28/n11414886.htm">中共稀土威胁 促美澳日组成稀土产业联盟</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/7/28/n11414886.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
